--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -25,7 +25,7 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a class="text-muted " th:href="@{/}">Dashboard</a></li>
-                                    <li class="breadcrumb-item" aria-current="page">All Mass</li>
+                                    <li class="breadcrumb-item" aria-current="page">All Users</li>
                                 </ol>
                             </nav>
                         </div>
@@ -97,7 +97,7 @@
                                                             <li>
                                                                 <a class="dropdown-item d-flex align-items-center" th:href="@{'/user/edit/' + ${user.id}}">
                                                                     <i class="ti ti-edit px-2"></i> <span> Edit</span>
-                                                                </a>git add
+                                                                </a>
                                                             </li>
 <!--                                                            <li>-->
 <!--                                                                <a class="dropdown-item d-flex align-items-center" th:href="@{/mass/{url}/member/new (url = ${mass.url})}">-->
